[package]
name = "rust-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
itertools = "0.10.0"
rust-crypto = "0.2"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"