[package]
edition = "2021"
name = "rust-tokio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 添加此行以允许警告
#[profile.release]
#rustflags = ["-C", "warnings=off"]

[dependencies]
bytes = "1"
itertools = "0.10.0"
mini-redis = "0.4"
once_cell = "1.7"
rust-crypto = "0.2"
tokio = {version = "1", features = ["full"]}

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"
